# smart-grid-openenv

./: .gitignore  OPENENV_HELP.md  README.md  dummy_inference.py  models.py  scratch.py  test_results.txt  test_variance.py
.agents/: AGENTS.md
.agents/rules/: openenv.md
server/: app.py  grid_env.py  simulator.py  tasks.py
smart_grid/: README.md  openenv.yaml  pyproject.toml  test_env.py  train.py
smart_grid_env/: Dockerfile  PROJECT.md  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_env.py  test_variance.py  verify_phase2.py
smart_grid_env/server/: __init__.py  app.py  grid_env.py  simulator.py  tasks.py  weather.py
smart_grid_env/tests/: test_app.py  test_grid_env.py  test_models.py  test_simulator.py  test_tasks.py  test_weather.py
temp_init/test_env/: README.md
