[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-grid-demand-response"
version = "2.1.0"
description = "A demand response environment designed specifically for LLM agents."
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "pydantic-settings",
    "httpx",
    "websockets"
]

[project.scripts]
server = "server.app:main"
env = "server.grid_env:SmartGridEnv"
